--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.LibraryManagement"
         tools:targetApi="31">
         <activity
+            android:name=".ReturnBook"
+            android:exported="false" />
+        <activity
             android:name=".BorrowActivity"
             android:exported="false" />
         <activity
