--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.LibraryManagement"
         tools:targetApi="31">
         <activity
+            android:name=".Donation"
+            android:exported="false" />
+        <activity
+            android:name=".Inquiry"
+            android:exported="false" />
+        <activity
             android:name=".ReturnBook"
             android:exported="false" />
         <activity
